@@ -87,6 +87,9 @@ Here is a history of user visible changes to Mailman.
 
     - Changed Gui/Topics.py to validate regexps in VERBOSE mode.  Bug #327008.
 
+    - Worked around a potential problem in HyperArch.py with unicode character
+      set arguments.  Bug #328353.
+
  i18n
 
     - Updated Dutch, Catalan and Polish translations.
